tests/snapshots/run_wpt_conformance__onnx_reduceLogSumExp_avoids_overflows_caused_by_taking_the_exp_of_large_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp avoids overflows caused by taking the exp of large inputs",
    "onnx",
    "PASS",
)
