tests/snapshots/run_wpt_conformance__onnx_reduceLogSumExp_avoids_underflows_caused_by_taking_the_log_of_small_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp avoids underflows caused by taking the log of small inputs",
    "onnx",
    "PASS",
)
