tests/snapshots/run_wpt_conformance__onnx_reduceLogSumExp_float16_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_log_sum_exp.https.any.js",
    "reduceLogSumExp float16 0D tensor empty axes",
    "onnx",
    "PASS",
)
